--- a/content/articles/article_1.tex
+++ b/content/articles/article_1.tex
@@ -1,1 +1,15 @@
- 
+%% Article 1 - Name and territory of the Union
+\DeclareArticle{1}{}{union-territory}
+\Article{Name and territory of the Union}{%
+    \Clause{India, that is Bharat, shall be a Union of States.}
+    
+    \Clause{The States and the territories thereof shall be as specified in the First Schedule.}
+    
+    \Clause{The territory of India shall comprise---}
+    
+    \SubClause{the territories of the States;}
+    
+    \SubClause{the Union territories specified in the First Schedule; and}
+    
+    \SubClause{such other territories as may be acquired.}
+}
