--- a/content/articles/article_19.tex
+++ b/content/articles/article_19.tex
@@ -1,1 +1,19 @@
- 
+%% Article 19 - Protection of certain rights regarding freedom of speech, etc.
+\DeclareArticle{19}{}{fundamental-rights}
+\Article{Protection of certain rights regarding freedom of speech, etc.}{%
+    \Clause{All citizens shall have the right---}
+    
+    \SubClause{to freedom of speech and expression;}
+    
+    \SubClause{to assemble peaceably and without arms;}
+    
+    \SubClause{to form associations or unions \Inserted{or co-operative societies}{Constitution (Ninety-seventh Amendment) Act, 2011, s. 2 \wef{12-1-2012}};}
+    
+    \SubClause{to move freely throughout the territory of India;}
+    
+    \SubClause{to reside and settle in any part of the territory of India; and}
+    
+    \SubClause{\Substituted{to practise any profession, or to carry on any occupation, trade or business.}{to acquire, hold and dispose of property; and to practise any profession, or to carry on any occupation, trade or business.}{Constitution (Forty-fourth Amendment) Act, 1978, s. 2 \wef{20-6-1979}}}
+    
+    \Clause{Nothing in sub-clause (a) of clause (1) shall affect the operation of any existing law, or prevent the State from making any law, in so far as such law imposes reasonable restrictions on the exercise of the right conferred by the said sub-clause in the interests of \Inserted{the sovereignty and integrity of India,}{Constitution (First Amendment) Act, 1951, s. 3 \wef{18-6-1951}} the security of the State, friendly relations with foreign States, public order, decency or morality, or in relation to contempt of court, defamation or incitement to an offence.}
+}
