--- a/content/articles/article_6.tex
+++ b/content/articles/article_6.tex
@@ -1,1 +1,13 @@
- 
+%% Article 6 - Rights of citizenship of certain persons who have migrated to India from Pakistan
+\DeclareArticle{6}{}{citizenship}
+\Article{Rights of citizenship of certain persons who have migrated to India from Pakistan}{%
+    Notwithstanding anything in article 5, a person who has migrated to the territory of India from the territory now included in Pakistan shall be deemed to be a citizen of India at the commencement of this Constitution if---
+    
+    \SubClause{either of his parents or any of his grand-parents was born in India as defined in the Government of India Act, 1935 (as originally enacted); and}
+    
+    \SubClause{\Clause{he has been ordinarily resident in the territory of India since the date of his migration, or}}
+    
+    \SubClause{\Clause{such person or either of his parents or any of his grand-parents was born in India as defined in the Government of India Act, 1935 (as originally enacted), and he has been registered as a citizen of India by an officer appointed in that behalf by the Government of the Dominion of India on an application made by him therefor to such officer before the commencement of this Constitution in the form and manner prescribed by that Government:}}
+    
+    \Proviso{no person shall be so deemed to be a citizen of India if he has voluntarily acquired the citizenship of any foreign State.}
+}
