--- a/content/parts/part_i.tex
+++ b/content/parts/part_i.tex
@@ -1,1 +1,8 @@
- 
+%% PART I - THE UNION AND ITS TERRITORY
+
+\Part{I}{THE UNION AND ITS TERRITORY}
+
+%% Include individual article files
+\input{content/articles/article_1}
+\input{content/articles/article_2}
+\input{content/articles/article_3}
