--- a/content/parts/part_ii.tex
+++ b/content/parts/part_ii.tex
@@ -1,1 +1,8 @@
- 
+%% PART II - CITIZENSHIP
+
+\Part{II}{CITIZENSHIP}
+
+%% Include individual article files for citizenship
+\input{content/articles/article_5}
+\input{content/articles/article_6}
+\input{content/articles/article_7}
