--- a/content/parts/part_iii.tex
+++ b/content/parts/part_iii.tex
@@ -1,1 +1,18 @@
- 
+%% PART III - FUNDAMENTAL RIGHTS
+
+\Part{III}{FUNDAMENTAL RIGHTS}
+
+\section*{General}
+\input{content/articles/article_12}
+\input{content/articles/article_13}
+
+\section*{Right to Equality}
+\input{content/articles/article_14}
+\input{content/articles/article_15}
+
+\section*{Right to Freedom}
+\input{content/articles/article_19}
+
+\section*{Right to Life and Personal Liberty}
+\input{content/articles/article_21}
+\input{content/articles/article_21a}
