--- a/examples/minimal.tex
+++ b/examples/minimal.tex
@@ -1,3 +1,17 @@
+%% Minimal working example for SoI LaTeX class
 \documentclass{soi}
+
 \begin{document}
+
+\Part{I}{SAMPLE PART}
+
+\DeclareArticle{1}{}{sample}
+\Article{Sample Article}{%
+    This is a minimal example demonstrating the SoI LaTeX class.
+    
+    \Clause{This is the first clause of the article.}
+    
+    \Clause{This is the second clause with an amendment: \Amendment{amended text}{Constitution (Sample Amendment) Act, 2025, s. 1}.}
+}
+
 \end{document}
