--- a/content/articles/article_12.tex
+++ b/content/articles/article_12.tex
@@ -1,1 +1,5 @@
- 
+%% Article 12 - Definition
+\DeclareArticle{12}{}{fundamental-rights}
+\Article{Definition}{%
+    In this Part, unless the context otherwise requires, "the State" includes the Government and Parliament of India and the Government and the Legislature of each of the States and all local or other authorities within the territory of India or under the control of the Government of India.
+}
