--- a/content/articles/article_13.tex
+++ b/content/articles/article_13.tex
@@ -1,1 +1,15 @@
- 
+%% Article 13 - Laws inconsistent with or in derogation of the fundamental rights
+\DeclareArticle{13}{}{fundamental-rights}
+\Article{Laws inconsistent with or in derogation of the fundamental rights}{%
+    \Clause{All laws in force in the territory of India immediately before the commencement of this Constitution, in so far as they are inconsistent with the provisions of this Part, shall, to the extent of such inconsistency, be void.}
+    
+    \Clause{The State shall not make any law which takes away or abridges the rights conferred by this Part and any law made in contravention of this clause shall, to the extent of the contravention, be void.}
+    
+    \Clause{In this article, unless the context otherwise requires,---}
+    
+    \SubClause{"law" includes any Ordinance, order, bye-law, rule, regulation, notification, custom or usage having in the territory of India the force of law;}
+    
+    \SubClause{"laws in force" includes laws passed or made by a Legislature or other competent authority in the territory of India before the commencement of this Constitution and not previously repealed, notwithstanding that any such law or any part thereof may not be then in operation either at all or in particular areas.}
+    
+    \Clause{\Inserted{Nothing in this article shall apply to any amendment of this Constitution made under article 368.}{Constitution (Twenty-fifth Amendment) Act, 1971, s. 3 \wef{20-4-1972}}}
+}
